Related: tdf#141499 don't grab focus during teardown of dialog

Change-Id: Ib55825294b4276cf36d7ce13562dc52b71f2a5bb
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/113615
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolanm@redhat.com>